first cut of 5.6 conversion